--- a/po-libgimp/ko.po
+++ b/po-libgimp/ko.po
@@ -5,171 +5,162 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gimp-plug-ins 1.1.10\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-03-04 00:14+0100\n"
+"POT-Creation-Date: 2004-03-16 23:26+0900\n"
 "PO-Revision-Date: 2003-06-05 07:55+0800\n"
-"Last-Translator: Young-Boo Park <DIRBOO@hitel.net>\n"
+"Last-Translator: Dongsu Jang <iolo@hellocity.net>\n"
 "Language-Team: Korean <ko@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #: libgimp/gimpbrushmenu.c:132
-#, fuzzy
 msgid "Brush Selection"
-msgstr "단위 셀렉션"
+msgstr "브러시 선택"
 
 #: libgimp/gimpbrushmenu.c:161 libgimp/gimppatternmenu.c:144
 msgid "_Browse..."
-msgstr ""
+msgstr "찾아보기(_B)..."
 
 #: libgimp/gimpexport.c:215 libgimp/gimpexport.c:251
-#, fuzzy, c-format
+#, c-format
 msgid "%s can't handle layers"
-msgstr "계층을 조절할수 없습니다."
+msgstr "%s은(는) 레이어를 처리할 수 없습니다"
 
 #: libgimp/gimpexport.c:216 libgimp/gimpexport.c:225 libgimp/gimpexport.c:234
-#, fuzzy
 msgid "Merge Visible Layers"
-msgstr "보이는 계층 머지"
+msgstr "보이는 레이어 합치기"
 
 #: libgimp/gimpexport.c:224
-#, fuzzy, c-format
+#, c-format
 msgid "%s can't handle layer offsets, size or opacity"
-msgstr "계층을 조절할수 없습니다."
+msgstr "%s은(는) 레어어 위치, 크기, 투명도를 처리할 수 없습니다"
 
 #: libgimp/gimpexport.c:233 libgimp/gimpexport.c:242
-#, fuzzy, c-format
+#, c-format
 msgid "%s can only handle layers as animation frames"
-msgstr "에니메이션 프래임인 계층만 조절할수 있습니다."
+msgstr "%s은(는) 에니메이션 프래임 레이어만 처리할 수 있습니다"
 
 #: libgimp/gimpexport.c:234 libgimp/gimpexport.c:243
-#, fuzzy
 msgid "Save as Animation"
 msgstr "에니메이션으로 저장"
 
 #: libgimp/gimpexport.c:243 libgimp/gimpexport.c:252 libgimp/gimpexport.c:261
 msgid "Flatten Image"
-msgstr "플래튼 이미지"
+msgstr "이미지 배경으로 합치기"
 
 #: libgimp/gimpexport.c:260
-#, fuzzy, c-format
+#, c-format
 msgid "%s can't handle transparency"
-msgstr "투명하게를 조절할 수 없습니다."
+msgstr "%s은(는) 투명도를 처리할 수 없습니다"
 
 #: libgimp/gimpexport.c:269
-#, fuzzy, c-format
+#, c-format
 msgid "%s can't handle layer masks"
-msgstr "계층을 조절할수 없습니다."
+msgstr "%s은(는) 레이어 마스크를 처리할 수 없습니다"
 
 #: libgimp/gimpexport.c:270
 msgid "Apply Layer Masks"
-msgstr ""
+msgstr "레이어 마스크 적용"
 
 #: libgimp/gimpexport.c:278
-#, fuzzy, c-format
+#, c-format
 msgid "%s can only handle RGB images"
-msgstr "오직 RGB 이미지만 조절할 수 있습니다"
+msgstr "%s은(는) RGB 이미지만 처리할 수 있습니다"
 
 #: libgimp/gimpexport.c:279 libgimp/gimpexport.c:317 libgimp/gimpexport.c:326
 msgid "Convert to RGB"
 msgstr "RGB로 바꾸기"
 
 #: libgimp/gimpexport.c:287
-#, fuzzy, c-format
+#, c-format
 msgid "%s can only handle grayscale images"
-msgstr "오직 그레이스케일 이미지만 조절 할수 있습니다"
+msgstr "%s은(는) 그레이스케일 이미지만 처리할 수 있습니다"
 
 #: libgimp/gimpexport.c:288 libgimp/gimpexport.c:317 libgimp/gimpexport.c:338
-#, fuzzy
 msgid "Convert to Grayscale"
 msgstr "그레이스케일로 바꾸기"
 
 #: libgimp/gimpexport.c:296
-#, fuzzy, c-format
+#, c-format
 msgid "%s can only handle indexed images"
-msgstr "인덱스된 이미지들만 조절할 수 있습니다."
+msgstr "%s은(는) 인덱스된 이미지만 처리할 수 있습니다"
 
 #: libgimp/gimpexport.c:297 libgimp/gimpexport.c:326 libgimp/gimpexport.c:336
-#, fuzzy
 msgid ""
 "Convert to Indexed using default settings\n"
 "(Do it manually to tune the result)"
 msgstr ""
-"인덱스된 기본 새팅으로 바꾸기\n"
-"(그것의 결과를 직접 조정하세요.)"
+"기본 설정을 사용하여 인덱스된 이미지로 바꾸기\n"
+"(결과를 수동으로 조절하십시오)"
 
 #: libgimp/gimpexport.c:306
-#, fuzzy, c-format
+#, c-format
 msgid "%s can only handle bitmap (two color) indexed images"
-msgstr "RGB 혹은 인덱스된 이미지만 조절할 수 있습니다"
+msgstr "%s은(는) 비트맵(두가지 색상) 인덱스된 이미지만 처리할 수 있습니다"
 
 #: libgimp/gimpexport.c:307
-#, fuzzy
 msgid ""
 "Convert to Indexed using bitmap default settings\n"
 "(Do it manually to tune the result)"
 msgstr ""
-"인덱스된 기본 새팅으로 바꾸기\n"
-"(그것의 결과를 직접 조정하세요.)"
+"비트맵 기본 설정을 사용하여 인덱스된 이미지로 바꾸기\n"
+"(결과를 수동으로 조절하십시오)"
 
 #: libgimp/gimpexport.c:316
-#, fuzzy, c-format
+#, c-format
 msgid "%s can only handle RGB or grayscale images"
-msgstr "RGB 혹은 그레이스케일 이미지만 조절할 수 있습니다"
+msgstr "%s은(는) RGB나 그레이스케일 이미지만 처리할 수 있습니다"
 
 #: libgimp/gimpexport.c:325
-#, fuzzy, c-format
+#, c-format
 msgid "%s can only handle RGB or indexed images"
-msgstr "RGB 혹은 인덱스된 이미지만 조절할 수 있습니다"
+msgstr "%s은(는) RGB나 인덱스된 이미지만 처리할 수 있습니다"
 
 #: libgimp/gimpexport.c:335
-#, fuzzy, c-format
+#, c-format
 msgid "%s can only handle grayscale or indexed images"
-msgstr "RGB 혹은 인덱스된 이미지만 조절할 수 있습니다"
+msgstr "%s은(는) 그레이스케일이나 인덱스된 이미지만 처리할 수 있습니다"
 
 #: libgimp/gimpexport.c:346
 #, c-format
 msgid "%s needs an alpha channel"
-msgstr ""
+msgstr "%s은(는) 알파 채널이 필요합니다"
 
 #: libgimp/gimpexport.c:347
 msgid "Add Alpha Channel"
-msgstr ""
+msgstr "알파 채널 더하기"
 
 #: libgimp/gimpexport.c:382
 msgid "Confirm Save"
-msgstr ""
+msgstr "저장 확인"
 
 #: libgimp/gimpexport.c:388
 msgid "Confirm"
-msgstr ""
+msgstr "확인"
 
 #: libgimp/gimpexport.c:457
 msgid "Export File"
-msgstr "경로 전하기(export)"
+msgstr "파일 내보내기"
 
 #: libgimp/gimpexport.c:461
-#, fuzzy
 msgid "_Ignore"
-msgstr "무시"
+msgstr "무시(_I)"
 
 #: libgimp/gimpexport.c:463
-#, fuzzy
 msgid "_Export"
-msgstr "전하기(export)"
+msgstr "내보내기(_E)"
 
 #. the headline
 #: libgimp/gimpexport.c:485
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Your image should be exported before it can be saved as %s for the following "
 "reasons:"
-msgstr ""
-"양식에 따라 그것을 저장하기 전에 당신의 이미지는 전해져야만(export) 합니다 : "
+msgstr "다음 이유 때문에, %s(으)로 저장하기 전에 이미지를 내보내야 합니다:"
 
 #: libgimp/gimpexport.c:563
 msgid "The export conversion won't modify your original image."
-msgstr "전하기(export) 전환은 당신의 원래 이미지를 바꾸기 않을 것입니다."
+msgstr "내보내기 변환은 원래의 이미지를 바꾸지 않습니다."
 
 #: libgimp/gimpexport.c:665
 #, c-format
@@ -177,6 +168,8 @@ msgid ""
 "You are about to save a layer mask as %s.\n"
 "This will not save the visible layers."
 msgstr ""
+"레이어 마스크를 %s(으)로 저장하려고 합니다.\n"
+"보이는 레이어를 저장하는 것이 아닙니다."
 
 #: libgimp/gimpexport.c:671
 #, c-format
@@ -184,219 +177,217 @@ msgid ""
 "You are about to save a channel (saved selection) as %s.\n"
 "This will not save the visible layers."
 msgstr ""
+"채널(저장된 선택)을 %s(으)로 저장하려고 합니다.\n"
+"보이는 레이어를 저장하는 것이 아닙니다."
 
 #: libgimp/gimpfontmenu.c:89
-#, fuzzy
 msgid "Font Selection"
-msgstr "단위 셀렉션"
+msgstr "글꼴 선택"
 
 #: libgimp/gimpgradientmenu.c:103
-#, fuzzy
 msgid "Gradient Selection"
-msgstr "단위 셀렉션"
+msgstr "그라디언트 선택"
 
 #: libgimp/gimpmenu.c:407
 msgid "None"
-msgstr ""
+msgstr "없음"
 
 #: libgimp/gimppatternmenu.c:115
-#, fuzzy
 msgid "Pattern Selection"
-msgstr "단위 셀렉션"
+msgstr "무늬 선택"
 
 #: libgimp/gimpunitcache.c:57
 msgid "percent"
-msgstr "퍼센트"
+msgstr "백분율"
 
 #: libgimpbase/gimputils.c:161 libgimpbase/gimputils.c:166
 msgid "(invalid UTF-8 string)"
-msgstr ""
+msgstr "(잘못된 UTF-8 문자열)"
 
 #: libgimpbase/gimputils.c:244
 #, c-format
 msgid "%d Bytes"
-msgstr ""
+msgstr "%d 바이트"
 
 #: libgimpbase/gimputils.c:249
 #, c-format
 msgid "%.2f KB"
-msgstr ""
+msgstr "%.2f KB"
 
 #: libgimpbase/gimputils.c:253
 #, c-format
 msgid "%.1f KB"
-msgstr ""
+msgstr "%.1f KB"
 
 #: libgimpbase/gimputils.c:257
 #, c-format
 msgid "%d KB"
-msgstr ""
+msgstr "%d KB"
 
 #: libgimpbase/gimputils.c:264
 #, c-format
 msgid "%.2f MB"
-msgstr ""
+msgstr "%.2f MB"
 
 #: libgimpbase/gimputils.c:268
 #, c-format
 msgid "%.1f MB"
-msgstr ""
+msgstr "%.1f MB"
 
 #: libgimpbase/gimputils.c:272
 #, c-format
 msgid "%d MB"
-msgstr ""
+msgstr "%d MB"
 
 #: libgimpbase/gimputils.c:279
 #, c-format
 msgid "%.2f GB"
-msgstr ""
+msgstr "%.2f GB"
 
 #: libgimpbase/gimputils.c:283
 #, c-format
 msgid "%.1f GB"
-msgstr ""
+msgstr "%.1f GB"
 
 #: libgimpbase/gimputils.c:287
 #, c-format
 msgid "%d GB"
-msgstr ""
+msgstr "%d GB"
 
 #: libgimpmodule/gimpmodule.c:177
 #, c-format
 msgid "Loading module: '%s'\n"
-msgstr ""
+msgstr "모듈 불러오는 중: '%s'\n"
 
 #: libgimpmodule/gimpmodule.c:194 libgimpmodule/gimpmodule.c:213
 #: libgimpmodule/gimpmodule.c:328 libgimpmodule/gimpmodule.c:356
 #: libgimpmodule/gimpmodule.c:450
 #, c-format
 msgid "Module '%s' load error: %s"
-msgstr ""
+msgstr "모듈 '%s'을(를) 불러오는 중 오류: %s"
 
 #: libgimpmodule/gimpmodule.c:283
 #, c-format
 msgid "Skipping module: '%s'\n"
-msgstr ""
+msgstr "모듈 건너뛰는 중: '%s'\n"
 
 #: libgimpmodule/gimpmodule.c:424
 msgid "Module error"
-msgstr ""
+msgstr "모듈 오류"
 
 #: libgimpmodule/gimpmodule.c:425
 msgid "Loaded"
-msgstr ""
+msgstr "불러오기 완료"
 
 #: libgimpmodule/gimpmodule.c:426
 msgid "Load failed"
-msgstr ""
+msgstr "불러오기 실패"
 
 #: libgimpmodule/gimpmodule.c:427
 msgid "Not loaded"
-msgstr ""
+msgstr "불러오지 않음"
 
 #: libgimpthumb/gimpthumb-utils.c:196
 #, c-format
 msgid "Failed to create thumbnail folder '%s'."
-msgstr ""
+msgstr "썸네일 폴더 '%s'을(를) 만들지 못했습니다."
 
 #: libgimpwidgets/gimpcolorbutton.c:93
 msgid "/_Foreground Color"
-msgstr ""
+msgstr "/전경색(_F)"
 
 #: libgimpwidgets/gimpcolorbutton.c:95
 msgid "/_Background Color"
-msgstr ""
+msgstr "/배경색(_B)"
 
 #: libgimpwidgets/gimpcolorbutton.c:98
 msgid "/Blac_k"
-msgstr ""
+msgstr "/검정색(_K)"
 
 #: libgimpwidgets/gimpcolorbutton.c:100
 msgid "/_White"
-msgstr ""
+msgstr "/흰색(_W)"
 
 #: libgimpwidgets/gimpcolorscales.c:142
 msgid "Scales"
-msgstr ""
+msgstr "배율"
 
 #: libgimpwidgets/gimpcolorscales.c:164 libgimpwidgets/gimpcolorselect.c:353
 msgid "_H"
-msgstr ""
+msgstr "_H"
 
 #: libgimpwidgets/gimpcolorscales.c:165 libgimpwidgets/gimpcolorselect.c:353
 msgid "_S"
-msgstr ""
+msgstr "_S"
 
 #: libgimpwidgets/gimpcolorscales.c:166 libgimpwidgets/gimpcolorselect.c:353
 msgid "_V"
-msgstr ""
+msgstr "_V"
 
 #: libgimpwidgets/gimpcolorscales.c:167 libgimpwidgets/gimpcolorselect.c:353
 msgid "_R"
-msgstr ""
+msgstr "_R"
 
 #: libgimpwidgets/gimpcolorscales.c:168 libgimpwidgets/gimpcolorselect.c:353
 msgid "_G"
-msgstr ""
+msgstr "_G"
 
 #: libgimpwidgets/gimpcolorscales.c:169 libgimpwidgets/gimpcolorselect.c:353
 msgid "_B"
-msgstr ""
+msgstr "_B"
 
 #: libgimpwidgets/gimpcolorscales.c:170
 msgid "_A"
-msgstr ""
+msgstr "_A"
 
 #: libgimpwidgets/gimpcolorscales.c:174 libgimpwidgets/gimpcolorselect.c:357
 msgid "Hue"
-msgstr ""
+msgstr "색상"
 
 #: libgimpwidgets/gimpcolorscales.c:175 libgimpwidgets/gimpcolorselect.c:358
 #: modules/cdisplay_proof.c:323
 msgid "Saturation"
-msgstr ""
+msgstr "채도"
 
 #: libgimpwidgets/gimpcolorscales.c:176 libgimpwidgets/gimpcolorselect.c:359
 msgid "Value"
-msgstr ""
+msgstr "명도"
 
 #: libgimpwidgets/gimpcolorscales.c:177 libgimpwidgets/gimpcolorselect.c:360
 msgid "Red"
-msgstr ""
+msgstr "빨강"
 
 #: libgimpwidgets/gimpcolorscales.c:178 libgimpwidgets/gimpcolorselect.c:361
 msgid "Green"
-msgstr ""
+msgstr "초록"
 
 #: libgimpwidgets/gimpcolorscales.c:179 libgimpwidgets/gimpcolorselect.c:362
 msgid "Blue"
-msgstr ""
+msgstr "파랑"
 
 #: libgimpwidgets/gimpcolorscales.c:180 libgimpwidgets/gimpcolorselect.c:363
 msgid "Alpha"
-msgstr ""
+msgstr "알파"
 
 #: libgimpwidgets/gimpcolorscales.c:254
 msgid "Hexadecimal color notation as used in HTML"
-msgstr ""
+msgstr "HTML용 16진수 색상 표기"
 
 #: libgimpwidgets/gimpcolorscales.c:268
 msgid "He_x Triplet:"
-msgstr ""
+msgstr "세개의 16진수(_X):"
 
 #: libgimpwidgets/gimpcolorselection.c:203
 msgid "Current:"
-msgstr ""
+msgstr "현재:"
 
 #: libgimpwidgets/gimpcolorselection.c:225
 msgid "Old:"
-msgstr ""
+msgstr "이전:"
 
 #: libgimpwidgets/gimpfileentry.c:350
-#, fuzzy
 msgid "Select Folder"
-msgstr "파일 선택"
+msgstr "폴더 선택"
 
 #: libgimpwidgets/gimpfileentry.c:364
 msgid "Select File"
@@ -404,87 +395,86 @@ msgstr "파일 선택"
 
 #: libgimpwidgets/gimpmemsizeentry.c:234
 msgid "KiloBytes"
-msgstr ""
+msgstr "킬로바이트"
 
 #: libgimpwidgets/gimpmemsizeentry.c:235
 msgid "MegaBytes"
-msgstr ""
+msgstr "메가바이트"
 
 #: libgimpwidgets/gimpmemsizeentry.c:236
 msgid "GigaBytes"
-msgstr ""
+msgstr "기가바이트"
 
 #: libgimpwidgets/gimppickbutton.c:141
 msgid ""
 "Click the eyedropper, then click a color anywhere on your screen to select "
 "that color."
 msgstr ""
+"스포이드를 클릭한 다음, 화면 상의 아무 곳이나 클릭하여 색상을 선택합니다."
 
 #: libgimpwidgets/gimpstock.c:113
-#, fuzzy
 msgid "Anchor"
-msgstr "인치"
+msgstr "고정점"
 
 #: libgimpwidgets/gimpstock.c:114
-#, fuzzy
 msgid "_Duplicate"
-msgstr "파이카"
+msgstr "복제(_D)"
 
 #: libgimpwidgets/gimpstock.c:115
 msgid "_Edit"
-msgstr ""
+msgstr "편집(_E)"
 
 #: libgimpwidgets/gimpstock.c:116
 msgid "Linked"
-msgstr ""
+msgstr "연결됨"
 
 #: libgimpwidgets/gimpstock.c:117
 msgid "Paste as New"
-msgstr ""
+msgstr "새로 붙여 넣기"
 
 #: libgimpwidgets/gimpstock.c:118
 msgid "Paste Into"
-msgstr ""
+msgstr "안에 붙여 넣기"
 
 #: libgimpwidgets/gimpstock.c:119
 msgid "_Reset"
-msgstr ""
+msgstr "원래대로(_R)"
 
 #: libgimpwidgets/gimpstock.c:120
 msgid "Visible"
-msgstr ""
+msgstr "보임"
 
 #: libgimpwidgets/gimpstock.c:168
 msgid "L_etter Spacing"
-msgstr ""
+msgstr "자간(_E)"
 
 #: libgimpwidgets/gimpstock.c:169
 msgid "L_ine Spacing"
-msgstr ""
+msgstr "행간(_I)"
 
 #: libgimpwidgets/gimpstock.c:184
 msgid "_Resize"
-msgstr ""
+msgstr "크기 조절(_R)"
 
 #: libgimpwidgets/gimpstock.c:185 libgimpwidgets/gimpstock.c:284
 msgid "_Scale"
-msgstr ""
+msgstr "배율 조절(_S)"
 
 #: libgimpwidgets/gimpstock.c:263
 msgid "Crop"
-msgstr ""
+msgstr "자르기"
 
 #: libgimpwidgets/gimpstock.c:280
 msgid "_Transform"
-msgstr ""
+msgstr "변형(_T)"
 
 #: libgimpwidgets/gimpstock.c:283
 msgid "_Rotate"
-msgstr ""
+msgstr "회전(_R)"
 
 #: libgimpwidgets/gimpstock.c:285
 msgid "_Shear"
-msgstr ""
+msgstr "기울이기(_S)"
 
 #: libgimpwidgets/gimpunitmenu.c:304
 msgid "More..."
@@ -492,227 +482,180 @@ msgstr "좀 더..."
 
 #: libgimpwidgets/gimpunitmenu.c:614
 msgid "Unit Selection"
-msgstr "단위 셀렉션"
+msgstr "단위 선택"
 
 #: libgimpwidgets/gimpunitmenu.c:657
-#, fuzzy
 msgid "Unit"
-msgstr "단위 "
+msgstr "단위"
 
 #: libgimpwidgets/gimpunitmenu.c:661
 msgid "Factor"
-msgstr "프랙탈"
+msgstr "팩터"
 
 #: libgimpwidgets/gimpwidgets.c:1271
 msgid ""
 "Use this value for random number generator seed - this allows you to repeat "
 "a given \"random\" operation"
 msgstr ""
+"이 값을 난수 생성기의 씨앗으로 사용합니다 - 주어진 \"난수\" 연산을 반복할 수 "
+"있습니다"
 
 #: libgimpwidgets/gimpwidgets.c:1275
 msgid "_New Seed"
-msgstr ""
+msgstr "새 씨앗 값(_N)"
 
 #: libgimpwidgets/gimpwidgets.c:1288
 msgid "Seed random number generator with a generated random number"
-msgstr ""
+msgstr "생성된 난수를 난수 생성기의 씨앗으로 사용합니다"
 
 #: libgimpwidgets/gimpwidgets.c:1292
 msgid "Randomize"
-msgstr ""
+msgstr "난수화"
 
 #: modules/cdisplay_colorblind.c:124
 msgid "Color deficit simulation filter (Brettel-Vienot-Mollon algorithm)"
-msgstr ""
+msgstr "색맹 모의 실험 필터 (Brettel-Vienot-Mollon 알고리즘)"
 
 #: modules/cdisplay_colorblind.c:190
 msgid "Color Deficient Vision"
-msgstr ""
+msgstr "색맹 보기"
 
 #: modules/cdisplay_colorblind.c:464
 msgid "Color _Deficiency Type:"
-msgstr ""
+msgstr "색맹 유형(_D):"
 
 #: modules/cdisplay_colorblind.c:473
 msgid "Protanopia (insensitivity to red)"
-msgstr ""
+msgstr "제 1 색맹 (적색맹)"
 
 #: modules/cdisplay_colorblind.c:476
 msgid "Deuteranopia (insensitivity to green)"
-msgstr ""
+msgstr "제 2 색맹 (녹색맹)"
 
 #: modules/cdisplay_colorblind.c:479
 msgid "Tritanopia (insensitivity to blue)"
-msgstr ""
+msgstr "제 3 색맹 (청색맹)"
 
 #: modules/cdisplay_gamma.c:90
 msgid "Gamma color display filter"
-msgstr ""
+msgstr "감마 색상 화면 표시 필터"
 
 #: modules/cdisplay_gamma.c:156
 msgid "Gamma"
-msgstr ""
+msgstr "감마"
 
 #: modules/cdisplay_gamma.c:311
 msgid "_Gamma:"
-msgstr ""
+msgstr "감마(_G):"
 
 #: modules/cdisplay_highcontrast.c:90
 msgid "High Contrast color display filter"
-msgstr ""
+msgstr "고휘도 색상 화면 표시 필터"
 
 #: modules/cdisplay_highcontrast.c:156
 msgid "Contrast"
-msgstr ""
+msgstr "휘도"
 
 #: modules/cdisplay_highcontrast.c:308
 msgid "Contrast C_ycles:"
-msgstr ""
+msgstr "휘도 순환(_Y):"
 
 #: modules/cdisplay_proof.c:102
 msgid "Color proof filter using ICC color profile"
-msgstr ""
+msgstr "ICC 생삭 프로파일을 사용하는 색상 교정 필터"
 
 #: modules/cdisplay_proof.c:166
 msgid "Color Proof"
-msgstr ""
+msgstr "색상 교정"
 
 #: modules/cdisplay_proof.c:319
 msgid "Perceptual"
-msgstr ""
+msgstr "인식"
 
 #: modules/cdisplay_proof.c:321
 msgid "Relative Colorimetric"
-msgstr ""
+msgstr "상대 비색계"
 
 #: modules/cdisplay_proof.c:325
 msgid "Absolute Colorimetric"
-msgstr ""
+msgstr "절대 비색계"
 
 #: modules/cdisplay_proof.c:331
 msgid "_Intent:"
-msgstr ""
+msgstr "의도(_I):"
 
 #: modules/cdisplay_proof.c:334
 msgid "Choose an ICC Color Profile"
-msgstr ""
+msgstr "ICC 색상 프로파일 선택"
 
 #: modules/cdisplay_proof.c:337
 msgid "_Profile:"
-msgstr ""
+msgstr "프로파일(_P):"
 
 #: modules/cdisplay_proof.c:345
 msgid "_Black Point Compensation"
-msgstr ""
+msgstr "검정색 점 보상(_B)"
 
 #: modules/colorsel_cmyk.c:73
 msgid "CMYK color selector"
-msgstr ""
+msgstr "CMYK 색상 선택기"
 
 #: modules/colorsel_cmyk.c:132
 msgid "CMYK"
-msgstr ""
+msgstr "CMYK"
 
 #: modules/colorsel_cmyk.c:149
 msgid "_C"
-msgstr ""
+msgstr "_C"
 
 #: modules/colorsel_cmyk.c:150
 msgid "_M"
-msgstr ""
+msgstr "_M"
 
 #: modules/colorsel_cmyk.c:151
 msgid "_Y"
-msgstr ""
+msgstr "_Y"
 
 #: modules/colorsel_cmyk.c:152
 msgid "_K"
-msgstr ""
+msgstr "_K"
 
 #: modules/colorsel_cmyk.c:156
-#, fuzzy
 msgid "Cyan"
-msgstr "취소"
+msgstr "청록"
 
 #: modules/colorsel_cmyk.c:157
 msgid "Magenta"
-msgstr ""
+msgstr "자홍"
 
 #: modules/colorsel_cmyk.c:158
 msgid "Yellow"
-msgstr ""
+msgstr "노랑"
 
 #: modules/colorsel_cmyk.c:159
 msgid "Black"
-msgstr ""
+msgstr "검정"
 
 #: modules/colorsel_cmyk.c:193
 msgid "Black Pullout (%):"
-msgstr ""
+msgstr "검정색 농도 (%):"
 
 #: modules/colorsel_triangle.c:110
 msgid "Painter-style triangle color selector"
-msgstr ""
+msgstr "페인터같은 삼각형 색 선택기"
 
 #: modules/colorsel_triangle.c:182
 msgid "Triangle"
-msgstr ""
+msgstr "삼각형"
 
 #: modules/colorsel_water.c:104
 msgid "Watercolor style color selector"
-msgstr ""
+msgstr "수채화 형태의 색 선택기"
 
 #: modules/colorsel_water.c:176
 msgid "Watercolor"
-msgstr ""
+msgstr "수채화"
 
 #: modules/colorsel_water.c:251
 msgid "Pressure"
-msgstr ""
-
-#, fuzzy
-#~ msgid "Parameter Settings"
-#~ msgstr "단위 셀렉션"
-
-#~ msgid "pixel"
-#~ msgstr "픽셀"
-
-#~ msgid "pixels"
-#~ msgstr "픽셀"
-
-#~ msgid "inches"
-#~ msgstr "인치"
-
-#~ msgid "millimeter"
-#~ msgstr "밀리미터"
-
-#~ msgid "millimeters"
-#~ msgstr "밀리미터"
-
-#~ msgid "point"
-#~ msgstr "포인트"
-
-#~ msgid "points"
-#~ msgstr "포인트"
-
-#~ msgid "picas"
-#~ msgstr "파이카"
-
-#, fuzzy
-#~ msgid "Select Directory"
-#~ msgstr "파일 선택"
-
-#~ msgid "Select"
-#~ msgstr "선택"
-
-#~ msgid "Close"
-#~ msgstr "닫기"
-
-#~ msgid "warning: no home directory."
-#~ msgstr "경고: 홈 디렉토리가 아닙니다."
-
-#~ msgid "unit-menu-format string ended within %%-sequence"
-#~ msgstr "unit-menu-format 스트링이 %%-sequence으로 끝났습니다"
-
-#~ msgid "unit-menu-format contains unknown format sequence '%%%c'"
-#~ msgstr "unit-menu-format 은 알수 없는 형식 시퀸스 '%%%c'를 포함합니다."
+msgstr "압력"
