--- a/po-script-fu/ChangeLog
+++ b/po-script-fu/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-17  Changwoo Ryu  <cwryu@debian.org>
+
+	* ko.po: Updated Korean translation by Dongsu Jang
+	<iolo@hellocity.net>.
+
 2004-03-13  Vincent van Adrighem  <adrighem@gnome.org>
 
 	* nl.po: Translation updated by Branko Collin.
