--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,22 @@
+2004-03-17  Sven Neumann  <sven@gimp.org>
+
+	Changes for help i18n in the core, the rest will take place in the
+	help plug-in:
+	
+	* app/text/gimptext.[ch]: removed gimp_text_get_default_language()
+	
+	* app/core/gimp-utils.[ch]: ... and added it here as
+	gimp_get_default_language().
+
+	* app/config/gimprc-blurbs.h
+	* app/config/gimpdisplayconfig.[ch]: added property "help-locales".
+	
+	* app/widgets/gimphelp.c: use the new property and pass it to the
+	help plug-in.
+
+	* app/core/gimpselection.c (gimp_selection_invalidate_boundary):
+	removed unused variable.
+
 2004-03-17  Simon Budig  <simon@gimp.org>
 
 	* app/widgets/gimplayertreeview.c
