Oops, forgot the fixed bug number in Changelog.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12698 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@
 	the mnemonics stripped. Avoids weird ordering in the "C" and
 	"POSIX" locales.
 
+	Fixes bug #137435.
+
 	* app/widgets/gimpitemtreeview.c: make a simple click on the
 	"New" Button use defaults and use shift-click for the new-dialog
 	invocation.
