--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-03-17  Sven Neumann  <sven@gimp.org>
+
+	* app/widgets/gimpbrushfactoryview.c
+	* app/widgets/gimpdatafactoryview.c
+	* app/widgets/gimppatternfactoryview.c: removed redundant code.
+
 2004-03-17  Simon Budig  <simon@gimp.org>
 
 	* app/gui/channels-commands.c
