--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-17  Miloslav Trmac  <mitr@volny.cz>
+
+	* cs.po: Updated Czech translation.
+
 2004-03-17  Changwoo Ryu  <cwryu@debian.org>
 
 	* ko.po: Updated Korean translation by Dongsu Jang
