--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-03-17  Simon Budig  <simon@gimp.org>
+
+	* app/core/gimpbrushpipe.c: ensure that each rank of a
+	brushpipe is >= 1.
+
+	Fixes bug #137529
+
 2004-03-17  Sven Neumann  <sven@gimp.org>
 
 	* app/widgets/gimpbrushfactoryview.c
