--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-17  Michael Schumacher <schumaml@cvs.gnome.org>
+
+	* de.po: Updated german translation.
+
 2004-03-17  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
