* pt_BR.po: updated translation, by 	  Leandro Pereira <leandro@linuxmag.com.br>
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12707 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/tips/ChangeLog
+++ b/tips/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-17  Gustavo Noronha Silva  <kov@debian.org>
+
+	* pt_BR.po: updated translation, by
+	  Leandro Pereira <leandro@linuxmag.com.br>
+
 2004-03-15  Sven Neumann  <sven@gimp.org>
 
 	* Makefile.am (tips_POFILES): added nl.po (Dutch).
