--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-18  Jan Morén  <jan.moren@lucs.lu.se>
+
+	* sv.po: Updated Swedish translation.
+
 2004-02-17  Michael Schumacher <schumaml@cvs.gnome.org>
 
 	* de.po: Updated german translation.
