2004-03-18  Michael Natterer  <mitch@gimp.org>
	* plug-ins/common/CML_explorer.c
	* plug-ins/common/gtm.c: changed procedure names to be all
	lowercase so 2.0 ships with a sane namespace and doesn't give bad
	examples to plug-in authors.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12711 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-03-18  Michael Natterer  <mitch@gimp.org>
+
+	* plug-ins/common/CML_explorer.c
+	* plug-ins/common/gtm.c: changed procedure names to be all
+	lowercase so 2.0 ships with a sane namespace and doesn't give bad
+	examples to plug-in authors.
+
 2004-03-18  Sven Neumann  <sven@gimp.org>
 
 	Added support for localized help (bug #136996). Will need some
