--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2004-03-18  Sven Neumann  <sven@gimp.org>
+
+	* app/widgets/gimphelp.c: disabled debug output.
+
+	* plug-ins/help/domain.[ch]
+	* plug-ins/help/help.[ch]
+	* plug-ins/help/locales.c: improved error reporting, fixed bugs
+	and disabled debug output.
+
 2004-03-18  Michael Natterer  <mitch@gimp.org>
 
 	* plug-ins/common/CML_explorer.c
