--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-18  Simon Budig  <simon@gimp.org>
+
+	* app/gui/layers-commands.c: Initialize a new layer
+	unconditionally. Spotted by Roman Joost.
+
 2004-03-18  Sven Neumann  <sven@gimp.org>
 
 	* app/widgets/gimphelp.c: disabled debug output.
