--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-18  Simon Budig  <simon@gimp.org>
+
+	* app/widgets/gimpitemtreeview.c: compress visibility and linked
+	undos.
+
 2004-03-18  Sven Neumann  <sven@gimp.org>
 
 	* app/display/gimpdisplayshell-dnd.c (gimp_display_shell_bucket_fill):
