2004-03-18  Sven Neumann  <sven@gimp.org>
	* plug-ins/script-fu/script-fu-console.c: applied a patch from
	Kevin Cozens that slightly alters the Script-Fu console output.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12717 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-03-18  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/script-fu/script-fu-console.c: applied a patch from
+	Kevin Cozens that slightly alters the Script-Fu console output.
+
+2004-03-18  Sven Neumann  <sven@gimp.org>
+
 	* app/gui/layers-commands.c (layers_text_tool)
 	* app/gui/layers-menu.c (layers_menu_update): treat modified text
 	layers like normal layers.
