--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-18  Manish Singh  <yosh@gimp.org>
+
+	* libgimp/gimptypes.h: removed obsolete GimpParamColor typedef.
+
 2004-03-18  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/script-fu/script-fu-console.c: applied a patch from
