2004-03-18  Sven Neumann  <sven@gimp.org>
	* app/tools/gimptexttool.[ch]: cleaned up text tool logic.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12721 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-18  Sven Neumann  <sven@gimp.org>
+
+	* app/tools/gimptexttool.[ch]: cleaned up text tool logic.
+
 2004-03-18  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/gimpitemtreeview.c: simplified visibility and linked
