2004-03-19  Michael Natterer  <mitch@gimp.org>
	* app/display/gimpdisplayshell.c (gimp_display_shell_new): added
	runtime check for GTK+ >= 2.4.0 and make sure the menubar's accels
	can be invoked even if the menubar is invisible (workaround for
	bug #137151).


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12724 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2004-03-19  Michael Natterer  <mitch@gimp.org>
 
+	* app/display/gimpdisplayshell.c (gimp_display_shell_new): added
+	runtime check for GTK+ >= 2.4.0 and make sure the menubar's accels
+	can be invoked even if the menubar is invisible (workaround for
+	bug #137151).
+
+2004-03-19  Michael Natterer  <mitch@gimp.org>
+
 	* app/gui/color-notebook.c (color_notebook_new)
 	* app/tools/gimpcroptool.c (crop_info_create)
 	* app/tools/gimptransformtool.c (gimp_transform_tool_dialog):
