2004-03-19  Sven Neumann  <sven@gimp.org>
	* etc/ps-menurc: updated PS keybindings contributed by Eric Pierce.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12729 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-03-19  Sven Neumann  <sven@gimp.org>
 
+	* etc/ps-menurc: updated PS keybindings contributed by Eric Pierce.
+
+2004-03-19  Sven Neumann  <sven@gimp.org>
+
 	* app/tools/gimptexttool.[ch]: added a confirmation dialog that is
 	shown when the user attempts to modify a modified text layer.
 
