2004-03-19  Sven Neumann  <sven@gimp.org>
	* app/text/gimptextlayer.c (gimp_text_layer_render): if there's a
	layer mask, resize it with the layer.

	* app/tools/gimptexttool.c: don't change text_tool->layer before
	calling gimp_text_tool_connect().


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12730 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2004-03-19  Sven Neumann  <sven@gimp.org>
 
+	* app/text/gimptextlayer.c (gimp_text_layer_render): if there's a
+	layer mask, resize it with the layer.
+
+	* app/tools/gimptexttool.c: don't change text_tool->layer before
+	calling gimp_text_tool_connect().
+
+2004-03-19  Sven Neumann  <sven@gimp.org>
+
 	* etc/ps-menurc: updated PS keybindings contributed by Eric Pierce.
 
 2004-03-19  Sven Neumann  <sven@gimp.org>
