2004-03-19  Sven Neumann  <sven@gimp.org>
	* HACKING: some minor updates.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12731 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-03-19  Sven Neumann  <sven@gimp.org>
 
+	* HACKING: some minor updates.
+
+2004-03-19  Sven Neumann  <sven@gimp.org>
+
 	* app/text/gimptextlayer.c (gimp_text_layer_render): if there's a
 	layer mask, resize it with the layer.
 
