--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2004-03-19  Sven Neumann  <sven@gimp.org>
+
+	* de.po: minor updates.
+
+	* ja.po: marked invalid translations as fuzzy.
+
 2004-03-19  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
