--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-19  Sven Neumann  <sven@gimp.org>
+
+	* sv.po: fixed invalid translation.
+
 2004-03-19  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
