--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2004-03-19  Sven Neumann  <sven@gimp.org>
 
+	* app/text/gimptextlayer.[ch]: added gimp_text_layer_set(), a
+	function that calls g_object_set() on the text-layer's text object
+	and pushes an undo step.
+
+	* app/display/gimpdisplayshell-dnd.c (gimp_display_shell_bucket_fill):
+	use the new function.
+
+2004-03-19  Sven Neumann  <sven@gimp.org>
+
 	* HACKING: some minor updates.
 
 2004-03-19  Sven Neumann  <sven@gimp.org>
