2004-03-19  Sven Neumann  <sven@gimp.org>
	* plug-ins/common/spread.c: don't call g_rand_int_range() with
	invalid parameters.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12737 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-03-19  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/spread.c: don't call g_rand_int_range() with
+	invalid parameters.
+
+2004-03-19  Sven Neumann  <sven@gimp.org>
+
 	* app/text/gimptextlayer.[ch]: added gimp_text_layer_set(), a
 	function that calls g_object_set() on the text-layer's text object
 	and pushes an undo step.
