--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2004-03-20  Sven Neumann  <sven@gimp.org>
+
+	* app/core/gimpimage-undo-push.c (undo_pop_text_layer): don't
+	exchange the text_layer's text object but sync it with the text
+	object from the undo step.
+
+	* app/text/gimptextlayer.c (gimp_text_layer_set): in case the
+	layer has a mask, push an undo group around the text modifications.
+
+	* app/tools/gimptexttool.c (gimp_text_tool_idle_apply): push a
+	text layer undo before applying the text changes.
+
 2004-03-19  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/common/spread.c: don't call g_rand_int_range() with
