--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-19  Evandro Fernandes Giovanini  <evandrofg@ig.com.br>
+
+	* pt_BR.po: Updated Brazilian Portuguese translation
+	from Joao S. O. Bueno <gwidion@mpc.com.br>.
+
 2004-03-19  Sven Neumann  <sven@gimp.org>
 
 	* sv.po: marked broken translation as fuzzy.
