--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-20  Jan Morén  <jan.moren@lucs.lu.se>
+
+	* sv.po: Updated broken Swedish translation.
+
 2004-03-19  Evandro Fernandes Giovanini  <evandrofg@ig.com.br>
 
 	* pt_BR.po: Updated Brazilian Portuguese translation
