--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-20  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/jigsaw.c: pack and show the "Jigsaw Style" radio
+	buttons.
+
 2004-03-20  Simon Budig  <simon@gimp.org>
 
 	* app/core/gimpundo.[ch]: Make it possible to refresh the preview
