added a reference to the bug report
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12745 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,7 @@
 2004-03-20  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/common/jigsaw.c: pack and show the "Jigsaw Style" radio
-	buttons.
+	buttons. Fixes bug #137737.
 
 2004-03-20  Simon Budig  <simon@gimp.org>
 
