2004-03-20  Sven Neumann  <sven@gimp.org>
	* app/text/gimptextlayer.c (gimp_text_layer_render): don't fiddle
	with the item size, gimp_drawable_set_tiles() does the right thing.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12746 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-03-20  Sven Neumann  <sven@gimp.org>
 
+	* app/text/gimptextlayer.c (gimp_text_layer_render): don't fiddle
+	with the item size, gimp_drawable_set_tiles() does the right thing.
+ 
+2004-03-20  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/common/jigsaw.c: pack and show the "Jigsaw Style" radio
 	buttons. Fixes bug #137737.
 
