--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-20  Simon Budig  <simon@gimp.org>
+
+	* docs/gimp.1.in: fixed a mangeled entry and described
+	"gimp --batch -".
+
 2004-03-20  Sven Neumann  <sven@gimp.org>
 
 	* app/text/gimptextlayer.c (gimp_text_layer_render): don't fiddle
