--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-03-20  Sven Neumann  <sven@gimp.org>
+
+	* app/tools/gimptexttool.c: update the text editor when the text
+	changes (for example when undoing text changes). Push a drawable
+	undo when applying text changes to a modified text layer.
+
 2004-03-20  Simon Budig  <simon@gimp.org>
 
 	* docs/gimp.1.in: fixed a mangeled entry and described
