--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-20  Robert Sedak  <robert.sedak@sk.htnet.hr>
+
+        * hr.po: Updated Croatian translation.
+
 2004-03-19  Sven Neumann  <sven@gimp.org>
 
 	* sv.po: fixed invalid translation.
