--- a/po-script-fu/ChangeLog
+++ b/po-script-fu/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-20  Robert Sedak  <robert.sedak@sk.htnet.hr>
+
+        * hr.po: Updated Croatian translation.
+
 2004-03-17  Changwoo Ryu  <cwryu@debian.org>
 
 	* ko.po: Updated Korean translation by Dongsu Jang
