--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-03-20  Simon Budig  <simon@gimp.org>
+
+	* app/tools/gimpvectortool.c: Assigned "b" as the default shortcut
+	for the path tool ("Bezier").
+
+	Fixes bug #137753.
+
 2004-03-20  Sven Neumann  <sven@gimp.org>
 
 	* app/tools/gimptexttool.c: update the text editor when the text
